...
  );
  for (const client of controlClients) {
    client.postMessage({ type: "started" });
  }
  await new Promise((res) => setTimeout(res, 1000));
  for (const client of controlClients) {
    client.postMessage({ type: "ready" });
  }
});

process.on("exit", () => {
  console.log("node exiting");
});
...
